--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
 				</p>
 			</div>
 
+
+			<div class="example game">
+				<h5>Ocean Commotion Linker and Clicker</h5>
+				<img src="images/oceancommotion.png" width="200px"/>
+				<p>
+					Linker and Clicker versions of the Ocean Commotion Match-3 sample game.</br>
+					<a href="https://britzl.github.io/OceanCommotionLinker">LINKER - TRY IT!</a></br>
+					<a href="https://github.com/britzl/oceancommotion-linker">LINKER SOURCE</a>
+					<a href="https://britzl.github.io/OceanCommotionClicker">CLICKER - TRY IT!</a></br>
+					<a href="https://github.com/britzl/oceancommotion-clicker">CLICKER SOURCE</a>
+				</p>
+			</div>
+
+
 			<div class="example effect">
 				<h5>Screen shake</h5>
 				<img src="images/screen_shake.gif" width="200px"/>
