--- a/index.html
+++ b/index.html
@@ -488,6 +488,17 @@
 				</p>
 			</div>
 
+
+			<div class="example movement animation">
+				<h5>Bullet paths</h5>
+				<img src="images/bullet_paths.png" width="200px"/>
+				<p>
+					This example shows how to move a game object along a path, with an optional movement pattern.</br>
+					<a href="bullet_paths/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/bullet_paths">SOURCE</a>
+				</p>
+			</div>
+
 		</div>
 	</div>
 
