Added infinite map example

--- a/index.html
+++ b/index.html
@@ -362,6 +362,16 @@
 				</p>
 			</div>
 
+			<div class="example map">
+				<h5>Infinite map</h5>
+				<img src="images/infinite_map.png" width="200px"/>
+				<p>
+					This example shows how to create an infinitely scrolling tilemap with perlin noise terrain and enemies.</br>
+					<a href="infinite_map/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/infinite_map">SOURCE</a>
+				</p>
+			</div>
+
 
 		</div>
 
