--- a/index.html
+++ b/index.html
@@ -181,19 +181,27 @@
 				</p>
 			</div>
 
-
 			<div class="example game">
 				<h5>Ocean Commotion Linker and Clicker</h5>
 				<img src="images/oceancommotion.png" width="200px"/>
 				<p>
 					Linker and Clicker versions of the Ocean Commotion Match-3 sample game.</br>
 					<a href="https://britzl.github.io/OceanCommotionLinker">LINKER - TRY IT!</a></br>
-					<a href="https://github.com/britzl/oceancommotion-linker">LINKER SOURCE</a>
+					<a href="https://github.com/britzl/oceancommotion-linker">LINKER SOURCE</a></br>
 					<a href="https://britzl.github.io/OceanCommotionClicker">CLICKER - TRY IT!</a></br>
 					<a href="https://github.com/britzl/oceancommotion-clicker">CLICKER SOURCE</a>
 				</p>
 			</div>
 
+			<div class="example game">
+				<h5>Numberz</h5>
+				<img src="images/numberz.png" width="200px"/>
+				<p>
+					Numberz game. Can you move all numbers once?</br>
+					<a href="https://britzl.github.io/Numberz">TRY IT!</a></br>
+					<a href="https://github.com/britzl/numberz">SOURCE</a>
+				</p>
+			</div>
 
 			<div class="example effect">
 				<h5>Screen shake</h5>
