Added fighter combo

--- a/index.html
+++ b/index.html
@@ -506,7 +506,6 @@
 				</p>
 			</div>
 
-
 			<div class="example movement animation">
 				<h5>Bullet paths</h5>
 				<img src="images/bullet_paths.png" width="200px"/>
@@ -514,6 +513,16 @@
 					This example shows how to move a game object along a path, with an optional movement pattern.</br>
 					<a href="bullet_paths/index.html">TRY IT!</a></br>
 					<a href="https://github.com/britzl/publicexamples/tree/master/examples/bullet_paths">SOURCE</a>
+				</p>
+			</div>
+
+			<div class="example movement animation">
+				<h5>Fighter combo</h5>
+				<img src="images/fighter_combo.png" width="200px"/>
+				<p>
+					This example shows how to do fighter combos in games such as Street Fighter.</br>
+					<a href="fighter_combo/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/fighter_combo">SOURCE</a>
 				</p>
 			</div>
 
