Chabged example tag

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 				</p>
 			</div>
 
-			<div class="example movement animation">
+			<div class="example input animation">
 				<h5>Fighter combo</h5>
 				<img src="images/fighter_combo.png" width="200px"/>
 				<p>
