Added new examples

--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
 				</p>
 			</div>
 
+			<div class="example game">
+				<h5>Towerz</h5>
+				<img src="images/towerz.png" width="200px"/>
+				<p>
+					Tipsy Towers game. How high can you stack 'em'?</br>
+					<a href="https://britzl.github.io/Towerz">TRY IT!</a></br>
+					<a href="https://github.com/britzl/towerz">SOURCE</a>
+				</p>
+			</div>
+
 			<div class="example effect">
 				<h5>Screen shake</h5>
 				<img src="images/screen_shake.gif" width="200px"/>
@@ -525,6 +535,18 @@
 					<a href="https://github.com/britzl/publicexamples/tree/master/examples/fighter_combo">SOURCE</a>
 				</p>
 			</div>
+
+
+			<div class="example effect shader">
+				<h5>Sprite tinting</h5>
+				<img src="images/sprite_tinting.png" width="200px"/>
+				<p>
+					This example shows how to tint sprites using the predefined "tint" fragment constant.</br>
+					<a href="sprite_tinting/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/sprite_tinting">SOURCE</a>
+				</p>
+			</div>
+
 
 		</div>
 	</div>
