--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				<img src="images/orthographic.png" width="200px"/>
 				<p>
 					This example shows how to use the Orthographic Camera API.</br>
-					<a href="orthographic/index.html">TRY IT!</a></br>
+					<a href="https://britzl.github.io/Orthographic/index.html">TRY IT!</a></br>
 					<a href="https://github.com/britzl/defold-orthographic">SOURCE</a>
 				</p>
 			</div>
