Uploaded Swarm AI example

--- a/index.html
+++ b/index.html
@@ -258,6 +258,16 @@
 				</p>
 			</div>
 
+			<div class="example mechanic ai">
+				<h5>Swarm AI</h5>
+				<img src="images/swarmai.gif" width="200px"/>
+				<p>
+					This example shows how to create a simple swarm AI that follows a target and avoids other AI agents.</br>
+					<a href="swarmai/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/swarm_ai">SOURCE</a>
+				</p>
+			</div>
+
 			<div class="example mechanic platformer">
 				<h5>One-way platforms</h5>
 				<img src="images/one_way_platforms.gif" width="200px"/>
