Added simple button example

--- a/index.html
+++ b/index.html
@@ -558,6 +558,19 @@
 			</div>
 
 
+
+			<div class="example input gui">
+				<h5>Simple button</h5>
+				<img src="images/simple_button.png" width="200px"/>
+				<p>
+					This example shows how to create a simple button with a pressed and released state.</br>
+					<a href="simple_button/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/simple_button">SOURCE</a>
+				</p>
+			</div>
+
+
+
 		</div>
 	</div>
 
