Added top down movement example

--- a/index.html
+++ b/index.html
@@ -401,6 +401,16 @@
 			</div>
 
 
+			<div class="example animation input movement">
+				<h5>Top down movement</h5>
+				<img src="images/top_down_movement.png" width="200px"/>
+				<p>
+					This example shows how to move a sprite in eight directions and play an animation based on movement direction as well as how to handle idle animation when no longer moving.</br>
+					<a href="top_down_movement/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/top_down_movement">SOURCE</a>
+				</p>
+			</div>
+
 		</div>
 
 		<!-- RIGHT COLUMN -->
