Added tilemap layers example

--- a/index.html
+++ b/index.html
@@ -580,6 +580,16 @@
 			</div>
 
 
+			<div class="example tilemap">
+				<h5>Tilemap layers</h5>
+				<img src="images/tilemap_layers.png" width="200px"/>
+				<p>
+					This example shows how interleave sprites with tilemap layers.</br>
+					<a href="tilemap_layers/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/tilemap_layers">SOURCE</a>
+				</p>
+			</div>
+
 
 		</div>
 	</div>
