--- a/index.html
+++ b/index.html
@@ -591,6 +591,17 @@
 			</div>
 
 
+
+			<div class="example tilemap">
+				<h5>Tilemap layers</h5>
+				<img src="images/tilemap_collisions.png" width="200px"/>
+				<p>
+					This example shows how to detect tilemap collisions.</br>
+					<a href="tilemap_collisions/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/tilemap_collisions">SOURCE</a>
+				</p>
+			</div>
+
 		</div>
 	</div>
 
