Added parallax example

--- a/index.html
+++ b/index.html
@@ -411,6 +411,17 @@
 				</p>
 			</div>
 
+
+			<div class="example input">
+				<h5>Parallax</h5>
+				<img src="images/parallax.gif" width="200px"/>
+				<p>
+					This example shows how to create a parallax effect controlled either by mouse or accelerometer.</br>
+					<a href="parallax/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/parallax">SOURCE</a>
+				</p>
+			</div>
+
 		</div>
 
 		<!-- RIGHT COLUMN -->
