Added top down spaceship

--- a/index.html
+++ b/index.html
@@ -412,6 +412,17 @@
 			</div>
 
 
+			<div class="example animation input movement">
+				<h5>Top down spaceship</h5>
+				<img src="images/top_down_spaceship.png" width="200px"/>
+				<p>
+					This example shows how to move a game object with a constant speed in direction of rotation.</br>
+					<a href="top_down_spaceship/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/top_down_spaceship">SOURCE</a>
+				</p>
+			</div>
+
+
 			<div class="example input">
 				<h5>Parallax</h5>
 				<img src="images/parallax.gif" width="200px"/>
