Changed title of example

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
 
 			<div class="example tilemap">
-				<h5>Tilemap layers</h5>
+				<h5>Tilemap collisions</h5>
 				<img src="images/tilemap_collisions.png" width="200px"/>
 				<p>
 					This example shows how to detect tilemap collisions.</br>
