Added simple lights example

--- a/index.html
+++ b/index.html
@@ -233,6 +233,17 @@
 				</p>
 			</div>
 
+			<div class="example effect shader renderscript">
+				<h5>Simple Lights</h5>
+				<img src="images/simple_lights.png" width="200px"/>
+				<p>
+					This example shows how to create simple 2D light sources.</br>
+					<a href="simple_lights/index.html">TRY IT!</a></br>
+					<a href="https://github.com/britzl/publicexamples/tree/master/examples/simple_lights">SOURCE</a>
+				</p>
+			</div>
+
+
 		</div>
 
 		<!-- MIDDLE COLUMN -->
